--- a/src/API/RESTApi.csproj
+++ b/src/API/RESTApi.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Infrastracture\Infrastracture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Errors\" />
+  </ItemGroup>
+
 </Project>
