Unit Of Work Implemented

--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -1,12 +1,18 @@
+
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Halim; Initial Catalog=StarterDb;Trusted_Connection=True; multipleactiveresultsets=true;Encrypt=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "JwtSettings": {
-    "Secret": "super-secret-key",
+    "Secret": "7f2f72e3-af93-4396-ac9b-bc5e70dfd93d",
     "ExpireTimeInMinute": 3600,
     "Issuer": "CleanArchitecture",
     "Audience": "CleanArchitecture"
