--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,15 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=Halim; Initial Catalog=StarterDb;Trusted_Connection=True; multipleactiveresultsets=true;Encrypt=True;TrustServerCertificate=True;"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "JwtSettings": {
+      "Secret": "7f2f72e3-af93-4396-ac9b-bc5e70dfd93d",
+      "ExpireTimeInMinute": 3600,
+      "Issuer": "CleanArchitecture",
+      "Audience": "CleanArchitecture"
     }
-  },
-  "AllowedHosts": "*",
-  "JwtSettings": {
-    "Secret": "super-secret-key",
-    "ExpireTimeInMinute": 3600,
-    "Issuer": "CleanArchitecture",
-    "Audience": "CleanArchitecture"
   }
-}
