--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -1,7 +1,7 @@
 
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Halim; Initial Catalog=StarterDb;Trusted_Connection=True; multipleactiveresultsets=true;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=Server; Initial Catalog=StarterDb;Trusted_Connection=True; multipleactiveresultsets=true;Encrypt=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
