--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Customers\Queries\" />
+  </ItemGroup>
+
 </Project>
